[gd_scene format=3 uid="uid://cd2n1ft8y531m"]

[ext_resource type="FontFile" uid="uid://7e5nkjcbc361" path="res://assets/m6x11.ttf" id="1_64xbg"]
[ext_resource type="Script" uid="uid://cdx41hdly7byf" path="res://scripts/stats_panel.gd" id="1_j00bn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eeejb"]
bg_color = Color(0.22745098, 0.22745098, 0.22745098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pc8i4"]
bg_color = Color(0.29803923, 0.6862745, 0.3137255, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="StatsPanel" type="Control" unique_id=761449015]
custom_minimum_size = Vector2(800, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 50.0
size_flags_vertical = 0
script = ExtResource("1_j00bn")

[node name="MainContainer" type="VBoxContainer" parent="." unique_id=494983119]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="TopRow" type="HBoxContainer" parent="MainContainer" unique_id=382310029]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 60
alignment = 1

[node name="WPMContainer" type="HBoxContainer" parent="MainContainer/TopRow" unique_id=963093206]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="WPMValue" type="Label" parent="MainContainer/TopRow/WPMContainer" unique_id=897990601]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_64xbg")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WPMlabel" type="Label" parent="MainContainer/TopRow/WPMContainer" unique_id=689318204]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_64xbg")
theme_override_font_sizes/font_size = 32
text = "WPM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MistakesContainer" type="HBoxContainer" parent="MainContainer/TopRow" unique_id=309595098]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MistakesValue" type="Label" parent="MainContainer/TopRow/MistakesContainer" unique_id=1056204276]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_64xbg")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mistakeslabel" type="Label" parent="MainContainer/TopRow/MistakesContainer" unique_id=11041179]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_64xbg")
theme_override_font_sizes/font_size = 32
text = "MISTAKES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MainContainer" unique_id=1133155190]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_64xbg")
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_eeejb")
theme_override_styles/fill = SubResource("StyleBoxFlat_pc8i4")
